# rust-ownership

./: Cargo.toml
src/: dangling-references-1.rs  dangling-references-2.rs  function.rs  main.rs  mutable-references-2.rs  mutable-references-3.rs  mutable-references-4.rs  references-2.rs  return-as-tuple.rs  return-values-and-scope.rs  slice-1.rs  slice-2.rs  slice-3.rs  slice-4.rs
